welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:23: error: illegal start of simple expression
  }
  ^Program:30: error: ';' expected but ')' found.
 )
 ^Program:33: error: ')' expected but '}' found.
}
^